<resources>
    <string name="app_name">Smart Library Access</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email id</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Welcome</string>
    <string name="title_activity_login">Sign Up</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="hint_password1">Confirm your Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">New User?Register now</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send your password reset instructions.</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="ongoingcourse">Ongoing Course</string>
    <string name="College">College Name</string>
    <string name="University">University</string>
    <string name="Branch">Branch</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Requiredtraining">Required Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Warest">Wisdom Association of Research in Engineering, Science and Technology</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_show">Show</string>
    <string name="snackbar_text">Snackbar Text</string>
    <string name="subject">Subject</string>


	
	


    <string name="Values">
        VALUES-
        Power to make engineering science and technological communities to lead the world as responsible global citizens.
    </string>




    <string name="vision">VISION

        •To inspire students, faculty, institute and corporate about the principles that leads to global responsibility for education, skill set and ethical environment al change.
        •To implement innovative livelihood programmes, workshops, conference in various discipline with these communities in different part of Karnataka and india.
        •To provide the platform in growth of quality education in engineering, science and technology through innovative ideas and creative deployment.
        •To help the various sector of societies by providing proper education and make them future endeavors.
        •Investment to raise stable and sustainable development in research through long term link with govt. and other research institution to make globally developed nation.
    </string>







    <string name="mission">MISSION
    •To identify, verify, define and detail the need of the society in the field of education.
    •Uplifting the society for the need of education and helps them to farm a better future.
    </string>





    <string name="Students">
    Students Benefits -
•	Deliver innovative training program which benefits students in building their career.
•	Identifying and assisting in futuristic employment opportunities at national and international level.
•	Provides coaching classes of academic subjects of different branches to strive for academic excellence.
•	Provides industrial visits, workshops, seminars, conferences, seminars, guest lectures and many more in various disciplines.
•	Providing free online material both data and video files of different subjects from various faculties in the field of engineering science and technology.
•	Helps in providing a platform for internships with leading corporates and Research institutions.
•	Identifying and assisting in futuristic employment opportunities at National and international level.
•	Provides opportunity to do research and development work in different domain and publishing their research work in various Journals and Conferences.
    </string>






    <string-array name="spinnerItems">
        <item>Select Community</item>
        <item>Student</item>
        <item>Faculty</item>
        <item>Organisation</item>
    </string-array>

	<string-array name="Semester">
        <item>Select Your Semester</item>
        <item>1</item>
        <item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
    </string-array>

	<string-array name="Department">
        <item>Select Your Department</item>
        <item>ECE</item>
        <item>CSE</item>
		<item>TCE</item>
		
    </string-array>
	

    <string-array name="Gender">
        <item>Select Your Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="Facultytype">
        <item>Select Faculty Type</item>
        <item>Trainee</item>
        <item>Freelancer</item>
    </string-array>


    <string-array name="Orgtype">
        <item>Select Organisation Type</item>
        <item>College/University</item>
        <item>Training</item>
        <item>Corporate</item>
    </string-array>




    <string-array name="Qualification">
        <item>Select Your Qualification</item>
        <item>Graduate</item>
        <item>Post Graduate</item>
        <item>Dual Degree/Integrated Program</item>
        <item>Others</item>
    </string-array>


    <string-array name="Degree">
        <item>Select Your Degree</item>
        <item>BE/B.Tech</item>
        <item>ME/M.Tech</item>
        <item>MS</item>
        <item>Dual Degree/Integrated Program</item>
        <item>MBA</item>
        <item>Graduate Diploma</item>
        <item>BSC/BCA/BCOM</item>
        <item>BBA/BBM</item>
        <item>MSC/MCOM</item>
        <item>MCA</item>
    </string-array>




    <string-array name="Field">
        <item>Select Your Field of Study</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>ME</item>
        <item>CE</item>
        <item>EE</item>
        <item>Finance</item>
        <item>HR</item>
        <item>Sales</item>
    </string-array>


    <string-array name="MaxDistance">
        <item>Select Your Max Distance of Onsite Work</item>
        <item>Teleworking</item>
        <item>Upto 10km</item>
        <item>Upto 30km</item>
        <item>upto 50/100/300km</item>

    </string-array>

    <string-array name="Daystrain">
        <item>Number of days you can train</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>

    </string-array>


</resources>
