<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.myapp.warest.ViewStudentProfile"
    android:adjustViewBounds="true">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <ImageView
			android:id="@+id/profileImage"
			android:layout_width="126dp"
			android:layout_height="112dp"
        />
	
        <TextView
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp"
            />




        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gender"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp"
            />




        <TextView
            android:id="@+id/ongoingcourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/ongoingcourse"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/College"
            android:textColor="@color/white"
            android:textSize="25dp" />





        <TextView
            android:id="@+id/university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/University"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/Branch"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/Country"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/State"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/City"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/reqdtraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/Requiredtraining"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>



</ScrollView>

