<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.myapp.warest.SignupActivity">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/white"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:weightSum="1">


		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">


			<EditText
				android:id="@+id/fullname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="Name"
				android:inputType="textPersonName"
				android:maxLines="1"
				android:textColor="@android:color/black" />

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">


			<EditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:textColor="@android:color/black" />


			


		</android.support.design.widget.TextInputLayout>


		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">


		</android.support.design.widget.TextInputLayout>

		<!-- Link to Login Screen -->
<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusableInTouchMode="true"
					android:hint="@string/hint_password"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:textColor="@android:color/black" />


			</android.support.design.widget.TextInputLayout>

			<EditText
				android:id="@+id/phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusableInTouchMode="true"
				android:hint="@string/phone"
				android:imeOptions="actionUnspecified"
				android:inputType="number"
				android:maxLength="10"
				android:textColor="@android:color/black" />


		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">



			<EditText
				android:id="@+id/confirmpwd"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusableInTouchMode="true"
				android:hint="@string/hint_password1"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"
				android:textColor="@android:color/black" />
		</android.support.design.widget.TextInputLayout>


		<Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:entries="@array/Gender"
            android:spinnerMode="dropdown">

        </Spinner>

		<Spinner
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:entries="@array/Semester"
            android:spinnerMode="dropdown">

        </Spinner>

		<Spinner
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:entries="@array/Department"
            android:spinnerMode="dropdown">

        </Spinner>

		
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">


			<EditText
				android:id="@+id/usn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="USN"
				android:inputType="textPersonName"
				android:maxLines="1"
				android:textColor="@android:color/black" />

		</android.support.design.widget.TextInputLayout>
		
		
		
		
		<Button
			android:id="@+id/register"
			style="?android:textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/action_sign_in_short"
			android:textColor="@android:color/black"
			android:textStyle="bold" />


	</LinearLayout>

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_gravity="center|bottom"
		android:layout_marginBottom="20dp"
		android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
